jilles      2006/06/24 17:30:52 UTC	(20060624-5530)
  Log:
  Make flush_cmode_callback() static.
  

  Changes:	Modified:
  +0 -1		trunk/include/extern.h (File Modified) 
  +1 -1		trunk/src/cmode.c (File Modified) 


jilles      2006/06/24 17:13:38 UTC	(20060624-5528)
  Log:
  Rewrite the mode stacker. This removes the Cygnus code,
  improves compatibility and omits redundant type C modes.
  There is no possibility for tracking pending modes for
  multiple channels anymore, with a 0 second timeout this
  seems only really useful for dreamforge-style ircds,
  which are obsolete.
  There is quite a lot of debug output; this can be removed
  later. The API is still the ugly cmode() thing, I plan
  to replace that by something more sensible.
  

  Changes:	Modified:
  +1 -2		trunk/README (File Modified) 
  +379 -235	trunk/src/cmode.c (File Modified) 


jilles      2006/06/23 18:25:01 UTC	(20060623-5526)
  Log:
  Don't allow mlocking a key starting with a colon or containing a comma.
  

  Changes:	Modified:
  +5 -0		trunk/modules/chanserv/set.c (File Modified) 


jilles      2006/06/23 17:26:26 UTC	(20060623-5524)
  Log:
  - Don't allow mlocking a key longer than 23 characters,
    ircd will truncate it and we'll be changing keys all
    the time.
  - Fix some memory leaks in /cs set mlock.
  

  Changes:	Modified:
  +1 -0		trunk/include/common.h (File Modified) 
  +10 -3	trunk/modules/chanserv/set.c (File Modified) 


jilles      2006/06/23 16:18:08 UTC	(20060623-5522)
  Log:
  P10: make this look more sane with channel_mode_va().
  also cause mlock checks when JOIN creates a channel.
  

  Changes:	Modified:
  +5 -7		trunk/protocol/asuka.c (File Modified) 
  +5 -7		trunk/protocol/bircd.c (File Modified) 
  +5 -7		trunk/protocol/nefarious.c (File Modified) 
  +5 -7		trunk/protocol/undernet.c (File Modified) 


jilles      2006/06/23 16:03:29 UTC	(20060623-5520)
  Log:
  channel_mode(): when sending -k while the channel has no